--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
       },
       "scripts": {
           "dev": "vite",
-          "build": "vite build"
+          "build": "vite build",
+          "preview": "vite preview",
+          "lint": "echo 'No linting configured'",
+          "type-check": "echo 'No type checking configured'"
       }
   }
